@@ -11,6 +11,7 @@ version <next>
 - Nullsoft Video (NSV) file demuxer
 - Shorten audio decoder
 - LOCO video decoder
+- Apple Lossless Audio Codec (ALAC) decoder 
 
 version 0.4.9-pre1:
 
